--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -20,9 +20,9 @@ pipeline {
       
       steps {
         
-        withSonarQubeEnv('SonarQube') {
-        // requires SonarQube Scanner for Maven 3.2+
-          sh 'mvn org.sonarsource.scanner.maven:sonar-maven-plugin:3.2:sonar'
+        def scannerHome = tool 'SonarQube Scanner 2.8';
+        withSonarQubeEnv('My SonarQube Server') {
+          sh "/home/jenkins/bin/sonar-scanner"
         }
         //sh "mvn clean verify sonar:sonar -Dsonar.projectName=test -Dsonar.projectKey=test -Dsonar.projectVersion=${BUILD_NUMBER}";
     
