--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -20,8 +20,8 @@ pipeline {
       
       steps {
         
-        withSonarQubeEnv('My SonarQube Server') {
-          sh "/home/jenkins/bin/sonar-scanner"
+        withSonarQubeEnv('SonarQube') {
+          sh 'mvn org.sonarsource.scanner.maven:sonar-maven-plugin:3.2:sonar'
         }
         //sh "mvn clean verify sonar:sonar -Dsonar.projectName=test -Dsonar.projectKey=test -Dsonar.projectVersion=${BUILD_NUMBER}";
     
