--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -6,7 +6,7 @@ pipeline {
 
   stages {
   
-    stage('Build') {
+    stage('Compilation') {
     
       steps {
       
@@ -16,20 +16,19 @@ pipeline {
       
     }
     
-    stage('analyse statique') {
+    stage('analyse statique avec SonarQube') {
       
       steps {
         
         withSonarQubeEnv('SonarQube') {
           sh 'mvn org.sonarsource.scanner.maven:sonar-maven-plugin:3.2:sonar'
         }
-        //sh "mvn clean verify sonar:sonar -Dsonar.projectName=test -Dsonar.projectKey=test -Dsonar.projectVersion=${BUILD_NUMBER}";
-    
+
       }
       
     }
     
-    stage('Test') {
+    stage('Test unitaire & publication') {
     
       steps {
       
