--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -16,7 +16,7 @@ pipeline {
       
     }
     
-    stage('Analyse statique avec SonarQube') {
+    stage('Analyse statique') {
       
       steps {
         
@@ -28,7 +28,7 @@ pipeline {
       
     }
     
-    stage('Test unitaire & publication') {
+    stage('Test unitaire') {
     
       steps {
       
